Closed Bug 678008 Opened 13 years ago Closed 13 years ago

Fix elfhack build in c++0x mode

Categories

(Firefox Build System :: General, defect)

x86_64
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla9

People

(Reporter: espindola, Assigned: espindola)

Details

Attachments

(1 file, 1 obsolete file)

Attached patch fix build (obsolete) — Splinter Review
      No description provided.
Attachment #552181 - Flags: review?(mh+mozilla)
Comment on attachment 552181 [details] [diff] [review]
fix build

Review of attachment 552181 [details] [diff] [review]:
-----------------------------------------------------------------

::: build/unix/elfhack/elfhack.cpp
@@ +36,5 @@
>   * ***** END LICENSE BLOCK ***** */
>  
>  #undef NDEBUG
> +#define __STDC_LIMIT_MACROS
> +#include <stdint.h>

Using climits and UINT_MAX should be better.

::: build/unix/elfhack/elfxx.h
@@ +276,4 @@
>          throw std::runtime_error("Unsupported ELF class or data encoding");
>      }
>  
> +    static inline unsigned size(char ei_class)

Please use "unsigned int", even if there's no difference, that's what the rest of the code uses.
Attachment #552181 - Flags: review?(mh+mozilla) → review-
Attached patch new patchSplinter Review
Attachment #552181 - Attachment is obsolete: true
Attachment #552353 - Flags: review?(mh+mozilla)
Attachment #552353 - Flags: review?(mh+mozilla) → review+
Rafael: reminder for landing.  :)
It landed on glandium's elfhack repo. I assumed he wanted to do a full merge. Glandium, is that the case?
http://hg.mozilla.org/mozilla-central/rev/565a69914c4b
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla9
Assignee: nobody → respindola
Product: Core → Firefox Build System
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: