Bug 678008 - Fix elfhack build in c++0x mode. r=mh+mozilla

In c++0x it is not valid to use a negative number in a unsigned
position in an initializer list. Add explicit casts and change
the size method to return an unsigned int.